[package]
name = "google-sheets-reader-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.104"
serde = { version = "1.0", features = ["derive"] }
lambda_runtime = "0.8.1"
tokio = "1.30.0"
reqwest = { version = "0.11.18", features = ["json"] }
google-sheets4 = "5.0.2+20230119"
hyper = "0.14.27"
hyper-rustls = { version = "0.24.1", features = ["http2"] }
dotenv = "0.15.0"
chrono = "0.4.26"
